--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.html
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.html
@@ -216,7 +216,7 @@
 							<li>New credits added every Monday</li>
 							<li>Unused credits will be lost.</li>
 						</ul>
-						<button class="btn btn-secondary">Select</button>
+						<button class="btn btn-secondary" (click)="selectCreditBasedSubscription()">Select</button>
 					</div>
 				</div>
 				<div class="sub-opt-div {{mobCss}}">
