ádded back matching skills summary and extra info to candidate profile

--- a/recruit-gui/src/app/accounts/accounts.component.css
+++ b/recruit-gui/src/app/accounts/accounts.component.css
@@ -56,6 +56,10 @@ h3{
 	color:brown;
 }
 
+.recruiter-credit-based-subscription{
+	color:purple;
+}
+
 .recruiter-active-subscription{
 	color:green;
 }
