suggestion filter by job spec - paste text flavour

--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -395,13 +395,29 @@
  		<div class="filter-close-box" (click)="closeModal()">X</div>
 	</div>
 	<div class="feedbackBox;">
-		<div class="modal-body" *ngIf="showFilterByJobSpec">
+		<div class="modal-body" *ngIf="showFilterByJobSpec && jobSpecUploadView == 'chooseType'">
+			<p>Please choose how to upload the job specification to filter on</p>
+			<div class="job-spec-upld-opt" (click)="switchJobSpecUpldOpt('doc')">Upload File</div>
+			<div class="job-spec-upld-opt" (click)="switchJobSpecUpldOpt('text')">Paste Text</div>
+		</div>
+		<div class="modal-body" *ngIf="showFilterByJobSpec && jobSpecUploadView == 'doc'">
 			<input type="file" (change)="setJobSepecFile($event)">
 			<br><br>
 				<button class="btn btn-secondary" (click)="extractFiltersFromJobSpec()">Perform Extraction</button>
 			<br><br>
 			<p>File types of .doc, .docx and pdf up to 1MB</p>
 			<br><br>
+		</div>
+		<div class="modal-body" *ngIf="showFilterByJobSpec && jobSpecUploadView == 'text'">
+			<form [formGroup]="filterByJobSpecForm">
+				<textarea formControlName="specAsText" (click)="clearSpecAsText()">
+					
+				</textarea>
+				<br><br>
+					<button class="btn btn-secondary" (click)="extractFiltersFromJobSpecText()">Perform Extraction</button>
+				<br><br>
+				<br><br>
+			</form>
 		</div>
 		<div class="modal-body" *ngIf="showFilterByJonSpecFailure">
 			<p>Unfortunately it was not possible to extract filters from this file.</p>
