--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -371,3 +371,23 @@ a {
 	font-weight:bold;
 	width:100%;
 }
+
+textarea {
+    width:100%;
+    height:90px;
+}
+
+.job-spec-upld-opt{
+	float:left;
+	width:40%;
+	min-width:300px;
+	margin:20px;
+	border:2px green solid;
+	cursor:pointer;
+	padding:20px;
+	font-weight:bold;
+}
+
+.job-spec-upld-opt:hover{
+	background:grey;
+}
