--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -370,6 +370,7 @@ textarea {
 .job-spec-upld-opt{
 	float:left;
 	width:40%;
+	min-width:280px;
 	margin:20px;
 	border:2px green solid;
 	cursor:pointer;
