--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -90,7 +90,7 @@
                     <div class="row">
 	               		<div class="col">
 	               			<h3>Questions</h3>
-	               			<p>Please feel free to email any further questions you may have to kparkings@gmail.com</p>
+	               			<p>Please feel free to email any further questions you may have to kparkings&#64;gmail.com</p>
 	               		</div>
                		 </div>
                 </div>
